# Karting-Manager

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
backups/: backup_karting_20260609_093644.sql  backup_karting_20260609_094253.sql  backup_karting_20260609_095050.sql
flaskr/: __init__.py  create_tables.ddl  db.py  example_data.ddl
flaskr/blueprints/: auth.py  login.py
flaskr/static/css/: login.css
flaskr/static/js/: login.js  main.js
flaskr/templates/: index.html
flaskr/templates/fragments/: login.html
karting/: __init__.py  backup.py  create_tables.ddl  db.py  example_data.ddl
karting/blueprints/: auth.py  eventDetails.py  eventsManagement.py  gearManagement.py  notificationsManagement.py  reportsManagement.py
karting/static/css/: events.css  gear.css  login.css  main.css
karting/static/js/: eventDetails.js  eventsManagement.js  gearManagement.js  login.js  main.js  notificationsManagement.js  reports.js  router.js  signup.js
karting/templates/: index.html
karting/templates/fragments/: errorNoLogin.html  eventDetails.html  eventsManagement.html  gearManagement.html  history.html  login.html  notificationsManagement.html  reportsManagement.html  signup.html
scripts/: check-format.sh  format.sh  how_to_start_in_docker.txt  setup.sh
